[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/glowinglight.png" type="Texture" id=1]
[ext_resource path="res://Script/Enemies/Projectile.gd" type="Script" id=2]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.285714, 1 )
colors = PoolColorArray( 0.0758057, 0.550973, 0.808594, 1, 0.7229, 0.978247, 0.984375, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 127.06
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
color_ramp = SubResource( 5 )

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
z_index = 4
amount = 3
speed_scale = 3.94
process_material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 8 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.76837e-07, 1.19209e-07 )
scale = Vector2( 0.7, 0.7 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
